# 01-rcli

./: .gitignore  Cargo.toml  cliff.toml  deny.toml  tmp.b64
fixtures/: blake3.txt
src/: lib.rs  main.rs  opts.rs  process.rs  utils.rs
src/cli/: base64.rs  csv.rs  genpass.rs  http.rs  mod.rs  text.rs
src/process/: b64.rs  csv_convert.rs  gen_pass.rs  http_serve.rs  mod.rs  text.rs
