[package]
name = "rcli"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["zzispp <zzispp@gmail.com>"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
axum = { version = "0.8.4", features = ["http2", "query", "tracing"] }
base64 = "0.22.1"
blake3 = "1.8.2"
clap = { version = "4.5.37", features = ["derive"] }
csv = "1.3.1"
rand = "0.9.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
tokio = { version = "1.45.0", features = ["rt", "rt-multi-thread", "net", "fs"] }
toml = "0.8.22"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
zxcvbn = "3.1.0"
